--- a/components/go-njpgokyh/overlays/development/deployment-patch.yaml
+++ b/components/go-njpgokyh/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-njpgokyh
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-njpgokyh:33071fa5aecba43eeb83bcbd545827c5b37e3769@sha256:c0dcc495409a885b96c205a1ff33a79779defd6f3202bd13f2aa8c0c8a749e29
+          name: container-image
